.k8s/apps/matrix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: synapse
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.146.0
    helm.sh/chart: matrix-synapse-3.12.19
  name: synapse-matrix-synapse
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: synapse
      app.kubernetes.io/instance: synapse
      app.kubernetes.io/name: matrix-synapse
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: 1d15c584d7fd4e585cca277d188c65b5480352e83f7f1292a3dc0f68487110ee
        checksum/secrets: 1409b9eb1c9b7af90774d176e5812df3ae4656234fb0c9f35cd12c519f96f672
      labels:
        app.kubernetes.io/component: synapse
        app.kubernetes.io/instance: synapse
        app.kubernetes.io/name: matrix-synapse
    spec:
      containers:
        - command:
            - sh
            - -c
            - "export POSTGRES_PASSWORD=$(echo \"${POSTGRES_PASSWORD:-}\" | sed 's/\\\
              //\\\\\\//g' | sed 's/\\&/\\\\\\&/g') && \\\nexport REDIS_PASSWORD=$(echo\
              \ \"${REDIS_PASSWORD:-}\" | sed 's/\\//\\\\\\//g' | sed 's/\\&/\\\\\\\
              &/g') && \\\ncat /synapse/secrets/*.yaml | \\\n  sed -e \"s/@@POSTGRES_PASSWORD@@/${POSTGRES_PASSWORD:-}/\"\
              \ \\\n      -e \"s/@@REDIS_PASSWORD@@/${REDIS_PASSWORD:-}/\" \\\n  \
              \       > /synapse/config/conf.d/secrets.yaml\n\n\nmkdir -p /modules\n\
              echo '[default]' > /modules/aws-config\necho 's3 =' >> /modules/aws-config\n\
              echo '  addressing_style = path' >> /modules/aws-config\npip install\
              \ --no-cache-dir --target /modules boto3 psycopg2-binary\npip install\
              \ --no-cache-dir --target /modules --no-deps synapse-s3-storage-provider\n\
              \nexec python -B -m synapse.app.homeserver \\\n            -c /synapse/config/homeserver.yaml\
              \ \\\n            -c /synapse/config/conf.d/\n"
          image: ghcr.io/element-hq/synapse:v1.146.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: synapse
          ports:
            - containerPort: 8008
              name: http
              protocol: TCP
            - containerPort: 9093
              name: replication
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources: {}
          securityContext: {}
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - mountPath: /synapse/config
              name: config
            - mountPath: /synapse/config/conf.d
              name: tmpconf
            - mountPath: /synapse/secrets
              name: secrets
            - mountPath: /synapse/keys
              name: signingkey
            - mountPath: /synapse/data
              name: media
            - mountPath: /tmp
              name: tmpdir
            - mountPath: /modules
              name: synapse-python-modules
            - mountPath: /synapse/config/conf.d/mautrix-whatsapp-registration.yaml
              name: mautrix-whatsapp-registration
              readOnly: true
              subPath: mautrix-whatsapp-registration.yaml
            - mountPath: /synapse/config/conf.d/mautrix-discord-registration.yaml
              name: mautrix-discord-registration
              readOnly: true
              subPath: mautrix-discord-registration.yaml
            - mountPath: /synapse/config/conf.d/mautrix-slack-registration.yaml
              name: mautrix-slack-registration
              readOnly: true
              subPath: mautrix-slack-registration.yaml
      securityContext: {}
      serviceAccountName: default
      volumes:
        - configMap:
            name: synapse-matrix-synapse
          name: config
        - name: secrets
          secret:
            secretName: synapse-matrix-synapse
        - name: signingkey
          secret:
            items:
              - key: signing.key
                path: signing.key
            secretName: synapse-signingkey
        - emptyDir: {}
          name: tmpconf
        - emptyDir: {}
          name: tmpdir
        - name: media
          persistentVolumeClaim:
            claimName: synapse-matrix-synapse
        - emptyDir: {}
          name: synapse-python-modules
        - name: mautrix-whatsapp-registration
          secret:
            items:
              - key: registration.yaml
                path: mautrix-whatsapp-registration.yaml
            secretName: mautrix-whatsapp-registration
        - name: mautrix-discord-registration
          secret:
            items:
              - key: registration.yaml
                path: mautrix-discord-registration.yaml
            secretName: mautrix-discord-registration
        - name: mautrix-slack-registration
          secret:
            items:
              - key: registration.yaml
                path: mautrix-slack-registration.yaml
            secretName: mautrix-slack-registration
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.146.0
    helm.sh/chart: matrix-synapse-3.12.19
  name: synapse-matrix-synapse-test-connection
  namespace: apps
spec:
  containers:
    - args:
        - synapse-matrix-synapse:8008/_matrix/client/versions
      command:
        - wget
      image: busybox
      name: wget
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.146.0
    helm.sh/chart: matrix-synapse-3.12.19
  name: synapse-matrix-synapse
  namespace: apps
spec:
  ports:
    - name: http
      port: 8008
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: synapse
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: matrix-synapse
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.146.0
    helm.sh/chart: matrix-synapse-3.12.19
  name: synapse-replication
  namespace: apps
spec:
  ports:
    - name: replication
      port: 9093
      protocol: TCP
      targetPort: replication
  selector:
    app.kubernetes.io/component: synapse
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: matrix-synapse
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/version: 1.146.0
    helm.sh/chart: matrix-synapse-3.12.19
  name: synapse-matrix-synapse
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: matrix.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
          - backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
            path: /_synapse
            pathType: Prefix
  tls:
    - hosts:
        - matrix.josevictor.me
      secretName: wildcard-tls
